			ROX-Filer
			A RISC OS-like filer for X
			by Thomas Leonard

25-Jul-2005
~~~~~~~~~~~
Check for shared-mime-info 0.16 when building (Stephen Watson).

24-Jul-2005
~~~~~~~~~~~
An executable text file of unknown type is marked as executable if its name
doesn't contain a '.'. This is so that 'readme.txt' on a filesystem with
all execute bits set is seen as text, but a shell script with no extension
or interpreter header still shows up as an executable on Solaris (Thomas
Leonard; requested by Stephen Watson).

23-Jul-2005
~~~~~~~~~~~
Added icon for messages (Thomas Leonard).
Improvements for file type guessing (Thomas Leonard):
- When getting the type for a symlink, we need the absolute path now that we
  check file contents.
- Also check for extended attributes for the symlink target.
- Removed all of our code for guessing types from file names, since it
  duplicates the new xdgmime code.
- Files with control characters are now considered to be binary, even
  though they may be valid UTF-8.
- Executable files of unknown type are now marked as executable, not
  octet-stream.
- When complaining that there is no run action for an executable type,
  give the user a hint about setting the execute permission.
- Refreshing the MIME system also refreshes xdgmime.
- Added MIME rules to say that Python, PERL and Ruby are executable, as
  old versions of the MIME database don't have these rules (reported by
  Stephen Watson).


22-Jul-2005
~~~~~~~~~~~
At install time, add a rule to the MIME database that shell scripts are
executable, as the defaults are missing this (Thomas Leonard; reported by
Stephen Watson).
In the properties box, don't say that the run action is executable just
because the MIME type is executable. The execute bit must be set too
(Thomas Leonard).

21-Jul-2005
~~~~~~~~~~~
Replaced the text the Options box telling people to download and run
MIME-Editor with a button that actually does it (Thomas Leonard).

17-Jul-2005
~~~~~~~~~~~