@@ -2,19 +2,10 @@ dnl Process this file with autoconf to produce a configure script.
 AC_INIT(main.c)
 AC_CONFIG_HEADER(config.h)
 
-AC_ARG_WITH(platform,
-[  --with-platform	  platform name, as detected by AppRun],
-[AC_SUBST(with_platform)],
-[
-AC_MSG_ERROR([
-
-Please do not run 'configure' manually - instead, run the AppRun script with
-the --compile option, like this:
-	$ ROX-Filer/AppRun --compile
-
-Thank you.
-])
-])
+[ if [ -f configure ]; then ]
+	AC_MSG_ERROR([Please run configure from the build directory (try ../AppRun --compile)])
+	exit 1
+fi
 
 dnl Checks for programs.
 AC_PROG_CC
@@ -160,7 +151,7 @@ AC_CHECK_HEADERS(attr/xattr.h sys/xattr.h)
 dnl Extract version info from AppInfo.xml
 AC_MSG_CHECKING(extracting version information)
 [
-VERSION=`sed -n 's/^.*<Version>\([.0-9]*\).*<\/Version>.*$/\1/p' $APP_DIR/AppInfo.xml`
+VERSION=`sed -n 's/^.*<Version>\([.0-9]*\).*<\/Version>.*$/\1/p' ../AppInfo.xml`
 ]
 AC_DEFINE_UNQUOTED(VERSION, "$VERSION")
 AC_MSG_RESULT(version $VERSION)
