@@ -2,6 +2,12 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+26-Jul-2005
+~~~~~~~~~~~
+Removed custom platform detection (which was designed to allow a single
+copy of ROX-Filer to contain binaries for multiple platforms). Let the
+packaging system deal with it (Thomas Leonard).
+
 25-Jul-2005
 ~~~~~~~~~~~
 Check for shared-mime-info 0.16 when building (Stephen Watson).
